[workspace]

members = [
    "target-iceberg",
    "target-iceberg-dashbook",
    "target-iceberg-sql",
]

resolver = "2"

[workspace.dependencies]
arrow = "50.0.0"
async-trait = "0.1"
object_store = { version = "0.9", features = ["aws", "gcp"] }
dashtool-common = { git = "https://github.com/dashbook/dashtool" }
futures = "0.3.30"
iceberg-rust = { git = "https://github.com/JanKaul/iceberg-rust.git" }
iceberg-rust-spec = { git = "https://github.com/JanKaul/iceberg-rust.git" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
