[workspace]

members = [
    "target-iceberg",
    "target-iceberg-dashbook",
    "target-iceberg-sql",
]

resolver = "2"

[workspace.dependencies]
arrow = "50.0.0"
async-trait = "0.1"
object_store = { version = "0.9", features = ["aws", "gcp"] }
dashtool-common = "0.1"
futures = "0.3.30"
iceberg-rust = "0.2"
iceberg-rust-spec = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
