[workspace]

members = [
    "target-iceberg",
    "target-iceberg-sql",
]

resolver = "2"

[workspace.dependencies]
arrow = "51.0.0"
async-trait = "0.1"
object_store = { version = "0.9", features = ["aws", "gcp"] }
dashtool-common = "0.1"
futures = "0.3.30"
iceberg-rust = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-futures = "0.2"
