[package]
name = "target-iceberg-dashbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4", features = ["derive"] }
dashbook-catalog = { git = "https://github.com/dashbook/dashbook-catalog.git" }
futures = { workspace = true }
iceberg-rust = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
target-iceberg = { path = "../target-iceberg/" }
