[package]
name = "target-iceberg-sql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
clap = { version = "4", features = ["derive"] }
dashtool-common = { workspace = true }
futures = { workspace = true }
iceberg-sql-catalog = "0.3"
iceberg-rust = { workspace = true }
object_store = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
target-iceberg = { path = "../target-iceberg/" }

[dev-dependencies]
tempfile = "3.8.1"
