[package]
name = "target-iceberg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
object_store = { workspace = true }
dashtool-common = { workspace = true }
futures = { workspace = true }
iceberg-rust = { workspace = true }
iceberg-rust-spec = { workspace = true }
jsonschema = "0.17"
serde = { workspace = true }
serde_json = { workspace = true }
singer = { git = "https://github.com/dashbook/singer.git" }
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4"
