[package]
name = "target-iceberg"
version = "0.1.0"
edition = "2021"

description = "Singer target for Apache Iceberg"

license = "Apache-2.0"

repository = "https://github.com/dashbook/target-iceberg"

[dependencies]
arrow = { workspace = true }
async-trait = { workspace = true }
object_store = { workspace = true }
dashtool-common = { workspace = true }
futures = { workspace = true }
iceberg-rust = { workspace = true }
jsonschema = "0.17"
serde = { workspace = true }
serde_json = { workspace = true }
singer = "0.3"
thiserror = { workspace = true }
anyhow = { workspace = true }
chrono = "0.4"
tracing = { workspace = true }
tracing-futures = { workspace = true }
